app/assets/stylesheets/layout-fullscreen.css
/*
 * Structure & Layout
 */
html, body, #wrapper {
  height: 100%;
}
#wrapper {
  position: relative;
}
#header {
  height: 80px;
  padding: 0 1em;
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  z-index: 300;
}
#pages {
  margin-top: 2.75em;
  float : left;
}
#pages ul {
  list-style: none;
  margin: 0;
  padding: 0;
}
#pages li {
  float: left;
  margin-right: 0.4em;
}
#content {
  position: absolute;
  top: 80px;
  right: 0;
  left: 0;
  bottom: 0;
  z-index: 100;
}
#content-wrapper {
  padding: 2em;
}
#footer {
  color: #fff;
  position: absolute;
  bottom: 50px;
  left: 40px;
  z-index: 200;
}

/*
 * The Map
 */
#map-container {
  position : absolute;
  top:0;
  bottom:0;
  left: 0;
  right: 0;
  z-index: 50;
}
#map {
  position : absolute;
  top:0;
  bottom:0;
  width:100%;
}

#poweredby {
  position: absolute;
  bottom: 0;
  left: 0;
  margin: 0;
  padding: 0 5px;
  font: 11px/1.5 "Helvetica Neue", Arial, Helvetica, sans-serif;
  color: #333;
  background-color: rgba(255, 255, 255, 0.7);
     -moz-box-shadow: 0 0 7px #ccc;
  -webkit-box-shadow: 0 0 7px #ccc;
          box-shadow: 0 0 7px #ccc;
}

/*
 * Feature Popup
 */
#popup {
}
.information-panel {
  position: absolute;
  top: 15px;
  right: 5px;
  bottom: 45px;
}
.information-panel-content-wrap {
}
.information-panel-content {
}
.information-panel-content .feature,
.information-panel-content .page {
  overflow-y: auto;
  position: absolute;
  z-index:30;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
.information-panel-content .feature.show {
  top: 75px;
}
.information-panel .social {
  height: 74px;
  background-color: #eee;
  border: 1px solid #a8a8a8;
  border-bottom: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  overflow: hidden;
  z-index: 20;
}
.information-panel .close {
  width: 14px;
  height: 14px;
  background: url("close-bttn.png") no-repeat scroll 0 0 transparent;
  text-indent: -9999px;
  position: absolute;
  top: 10px;
  right: 10px;
  z-index: 10001;
}
.information-panel .close:hover { background-position: bottom left; }

.information-panel .popup-tip-wrapper {
  margin: -1px auto 0;
  width: 40px;
  height: 16px;
  position: absolute;
  bottom:-15px;
  left:50%;
  margin-left:-20px;
  overflow: hidden;
  z-index: 10002;
  }

.information-panel .popup-tip {
  background: white;
  width: 15px;
  height: 15px;
  padding: 1px;

  margin: -11px auto 0;

     -moz-transform: rotate(45deg);
  -webkit-transform: rotate(45deg);
      -ms-transform: rotate(45deg);
       -o-transform: rotate(45deg);
          transform: rotate(45deg);

  -webkit-box-shadow: 0 1px 14px #999;
     -moz-box-shadow: 0 1px 10px #888;
          box-shadow: 0 1px 10px #888;
}

/*
 * Popularity Filter (HiderSlider)
 */
.ui-hiderslider-container {
  overflow: visible;
  position: absolute;
  right: 40px;
  bottom: 50px;
  z-index: 6;
}
.ui-hiderslider-container > div {
  float: left;
}
.ui-hiderslider-title {
  padding: 0 10px;
  line-height:33px;
  vertical-align: middle;
  cursor: pointer;
}
.ui-hiderslider-content {
  position: relative;
  padding: 10px 0;
  overflow: hidden;
  width:1px;
}
.ui-hiderslider-slider {
  width:167px;
  margin:0 10px;
}
.ui-hiderslider-close {}

/*
 * Crosshair for touchscreens
 */
#crosshair {
  position : absolute;
  z-index  : 10000;
}

